<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<modules>
		<module>infrastructure</module>
		<module>parking-service</module>
		<module>zone-service</module>
		<module>payment-service</module>
		<module>customer-service</module>
		<module>common</module>
	</modules>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.5</version>
		<relativePath/>
	</parent>

	<groupId>mhalo</groupId>
	<artifactId>parking-sys</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<java.version>17</java.version>
		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
		<mockito.version>5.7.0</mockito.version>
		<spring-kafka.version>3.0.12</spring-kafka.version>
		<kafka-avro-serializer.version>7.5.1</kafka-avro-serializer.version>
		<avro.version>1.11.3</avro.version>
		<spring-cloud.version>2022.0.4</spring-cloud.version>
		<assertj.version>3.25.1</assertj.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>db-resources</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>${assertj.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>clock</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>payment-application-service</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>payment-domain-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>payment-dataaccess</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>payment-messaging</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>payment-httpclient</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>parking-httpclient</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>parking-application-service</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>parking-domain-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>parking-application</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>parking-dataaccess</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>parking-messaging</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>common-domain-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>common-application</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>common-dataaccess</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>common-httpclient</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>common-application-service</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>outbox</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>kafka-producer</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>kafka-consumer</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>kafka-model</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>kafka-config-data</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>mhalo</groupId>
				<artifactId>logging</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<includes>
						<include>**/*IT*.java</include>
						<include>**/*Test*.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
